feat: sidenav icons

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -67,13 +67,13 @@
 <mat-drawer-container>
   <mat-sidenav #snav class="side-nav-left" position="start" role="directory" [opened]="opened" mode="over" (closedStart)="opened = false">
     <mat-nav-list>
-      <a mat-list-item routerLink="/home">Home</a>
-      <a mat-list-item routerLink="/pokedex">Pokedex</a>
-      <a mat-list-item routerLink="/moves">Moves</a>
-      <a mat-list-item routerLink="/items">Items</a>
-      <a mat-list-item routerLink="/abilities">Abilities</a>
-      <a mat-list-item routerLink="/natures">Natures</a>
-      <a mat-list-item routerLink="/battle">Battle</a>
+      <a mat-list-item routerLink="/home"><img class="sidenav-icon" src="../../../assets/home_icon.png" alt="Home icon"> Home</a>
+      <a mat-list-item routerLink="/pokedex"><img class="sidenav-icon" src="../../../assets/pokedex_icon.png" alt="Home icon"> Pokedex</a>
+      <a mat-list-item routerLink="/moves"><img class="sidenav-icon" src="../../../assets/moves_icon.png" alt="Home icon"> Moves</a>
+      <a mat-list-item routerLink="/items"><img class="sidenav-icon" src="../../../assets/item_icon.png" alt="Home icon"> Items</a>
+      <a mat-list-item routerLink="/abilities"><img class="sidenav-icon" src="../../../assets/abilitie_icon.png" alt="Home icon"> Abilities</a>
+      <a mat-list-item routerLink="/natures"><img class="sidenav-icon" src="../../../assets/nature_icon.png" alt="Home icon"> Natures</a>
+      <a mat-list-item routerLink="/battle"><img class="sidenav-icon" src="../../../assets/battle_icon.png" alt="Home icon"> Battle</a>
     </mat-nav-list>
   </mat-sidenav>
 </mat-drawer-container>
