--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -87,7 +87,7 @@ header {
   top: 0;
   bottom: 0;
   left: 0;
-  width: calc(75%-25%);
+  width: calc(70%-30%);
   z-index: 1003;
   background-color: #3f51b5;
   margin-top: 64px;
@@ -97,7 +97,7 @@ mat-nav-list {
   z-index: auto;
   background-color: #3f51b5;
   height: 500px;
-  width: 129px;
+  width: 140px;
 }
 
 mat-drawer-container {
@@ -105,6 +105,11 @@ mat-drawer-container {
   top: 0;
   left: 0;
   z-index: 1000;
+}
+
+.sidenav-icon {
+  width: 26px;
+  height: 26px;
 }
 
 @media (max-width: 1100px) {
@@ -125,6 +130,7 @@ mat-drawer-container {
 
 @media (max-width: 605px) {
   .side-nav-left {
-    margin-top: 57px;
+    margin-top: 55px;
   }
+
 }
