--- a/src/app/components/move-list/move-list.component.css
+++ b/src/app/components/move-list/move-list.component.css
@@ -49,7 +49,10 @@ tr.element-row:not(.expanded-row):active {
 }
 
 .element-description-attribution {
+  display: block;
   opacity: 0.5;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .element-detail {
@@ -65,4 +68,21 @@ tr.element-row:not(.expanded-row):active {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.box {
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 8px 16px;
+  border-radius: 10px;
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.box p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
 }
