--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -64,13 +64,17 @@
         <td mat-cell *matCellDef="let move" [attr.colspan]="columnsToDisplayWithExpand.length">
           <div class="element-detail" [@detailExpand]="move == expandedElement ? 'expanded' : 'collapsed'">
             <div class="element-description">
-              <p>ID: {{ move.id }}</p>
+              <div class="box">
+                <p>ID: {{ move.id }}</p>
+              </div>
+              <div class="box">
+                <p>PP: {{ move.pp }}</p>
+              </div>
               @for (effect of move.effect_entries; track effect) {
                 <span class="element-description-attribution">
                   {{ effect.effect }}
                 </span>
-              }
-              <p>PP: {{ move.pp }}</p>
+              }           
               <app-pokemon-learn [pokemon]="move.learned_by_pokemon"></app-pokemon-learn>
             </div>
           </div>
