--- a/src/app/components/move-list/move-list.component.css
+++ b/src/app/components/move-list/move-list.component.css
@@ -47,12 +47,15 @@ tr.element-row:not(.expanded-row):active {
 .element-description {
   padding: 16px;
   margin-bottom: 5px;
+  width: 100%;
 }
 
 .element-description-attribution {
   display: block;
   opacity: 0.5;
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 .element-detail {
@@ -71,14 +74,9 @@ tr.element-row:not(.expanded-row):active {
 }
 
 .box {
-  background-color: #ffffff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  padding: 8px 16px;
-  border-radius: 10px;
-  margin-right: 10px;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
+  display: flex;
+  justify-content: center;  
+  align-items: center;  
   margin-bottom: 6px;
 }
 
@@ -86,4 +84,9 @@ tr.element-row:not(.expanded-row):active {
   margin: 0;
   padding: 0;
   line-height: 1.5;
+}
+
+mat-card {
+  margin-right: 8px;
+  font-weight: bold;
 }
