--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -65,15 +65,22 @@
           <div class="element-detail" [@detailExpand]="move == expandedElement ? 'expanded' : 'collapsed'">
             <div class="element-description">
               <div class="box">
-                <mat-card>
+                <mat-card [ngStyle]="{ 'background': 'linear-gradient(90deg, #FFF5B3 0%, #FFFADD 100%)' }">
                   <mat-card-content>ID: {{ move.id }}</mat-card-content>
                 </mat-card>
-                <mat-card>
-                  <mat-card-content>PP: {{ move.pp }}</mat-card-content>
+                <mat-card [ngStyle]="{ 'background': 'linear-gradient(90deg, #B3D1FF 0%, #D9E8FF 100%)' }">
+                  <mat-card-content>
+                    @if(move.pp > 0) {
+                      PP: {{ move.pp }}
+                    }
+                    @else {
+                      PP: ?
+                    }
+                  </mat-card-content>
                 </mat-card>
-                <mat-card>
+                <mat-card [ngStyle]="{ 'background': 'linear-gradient(90deg, #AAAABB 0%, #DDDDFF 100%)' }">
                   <mat-card-content>{{ upperFirstLetter(move.generation.name) }}</mat-card-content>
-                </mat-card>
+                </mat-card>                
                 <mat-card [ngStyle]="{ 'background': getColorForType(move.damage_class.name) }">
                   <mat-card-content>{{ upperFirstLetter(move.damage_class.name) }}</mat-card-content>
                 </mat-card>
