fix: aligning pokemon learn and adding validation for movement without pokemon

--- a/src/app/components/pokemon-learn/pokemon-learn.component.css
+++ b/src/app/components/pokemon-learn/pokemon-learn.component.css
@@ -1,5 +1,8 @@
 mat-card {
-    display: table-row;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .mat-mdc-card-content {
