feat: adding location component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -74,6 +74,7 @@
       <a mat-list-item routerLink="/abilities"><img class="sidenav-icon" src="../../../assets/abilitie_icon.png" alt="Abilitie icon"> Abilities</a>
       <a mat-list-item routerLink="/natures"><img class="sidenav-icon" src="../../../assets/nature_icon.png" alt="Nature icon"> Natures</a>
       <a mat-list-item routerLink="/battle"><img class="sidenav-icon" src="../../../assets/battle_icon.png" alt="Battle icon"> Battle</a>
+      <a mat-list-item routerLink="/location"><img class="sidenav-icon" src="../../../assets/battle_icon.png" alt="Battle icon"> Location</a>
     </mat-nav-list>
   </mat-sidenav>
 </mat-drawer-container>
