--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   @for (location of locations; track location) {
-    <mat-card class="location-card" appearance="outlined">
+    <mat-card class="location-card" appearance="outlined"
+      (click)="onLocationClick(location)">
         <mat-card-header>
           <mat-card-title>{{upperFirstLetter(location.name)}}</mat-card-title>
         </mat-card-header>
