feat: creating folder with region images and starting implementing details.

--- a/src/app/components/region-details/region-details.component.html
+++ b/src/app/components/region-details/region-details.component.html
@@ -1,1 +1,31 @@
-<p>region-details works!</p>
+<div class="container">
+    <div class="menu">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>{{location.name}}</mat-card-title>
+            </mat-card-header>
+        </mat-card>        
+        <img class="img" mat-card-image src="{{location.img}}" alt="city image">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Version</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <p>Generation V</p>
+              </mat-card-content>
+        </mat-card>
+        <p>Version</p>
+        <p>Generation V</p>
+    </div>
+    <div class="text">
+        <p>
+            A região de Kanto (japonês: カントー地方 região de Kanto) é uma região do mundo Pokémon. Kanto está localizada a leste de Johto, 
+            que juntas formam uma massa de terra conjunta ao sul de Sinnoh. Kanto é o cenário da primeira geração de jogos e pode ser explorado 
+            nas Gerações II, III, IV e VII. Professor Carvalho é o Professor Pokémon residente e dá aos Treinadores Pokémon uma escolha entre 
+            Bulbasaur, Charmander ou Squirtle como seu primeiro parceiro Pokémon. Em Pokémon Yellow, Carvalho pretendia dar ao jogador um Eevee, 
+            mas depois que seu neto Blue o pega, ele dá ao jogador um Pikachu que ele tinha acabado de capturar. Em Pokémon: Let's Go, Pikachu!, 
+            o jogador escolhe Pikachu, enquanto em Pokémon: Let's Go, Eevee!, o jogador escolhe Eevee. Nos jogos, o jogador começa sua jornada 
+            em Pallet Town e termina no Indigo Plateau.
+        </p>
+    </div>
+</div>
