feat: adding upper title and adjustment padding layout

--- a/src/app/components/region-details/region-details.component.css
+++ b/src/app/components/region-details/region-details.component.css
@@ -40,6 +40,10 @@ mat-card {
     align-items: center;
 }
 
+mat-card-title {
+    margin-bottom: 10px;
+}
+
 @media (max-width: 950px) {
     .container {
         display: inline;
