--- a/src/app/components/region-details/region-details.component.html
+++ b/src/app/components/region-details/region-details.component.html
@@ -2,7 +2,7 @@
     <div class="menu">
         <mat-card>
             <mat-card-header>
-                <mat-card-title>{{location.name}}</mat-card-title>
+                <mat-card-title>{{upperFirstLetter(location.name)}}</mat-card-title>
             </mat-card-header>
         </mat-card>        
         <img class="img" mat-card-image src="{{location.img}}" alt="city image">
