--- a/src/app/components/region-details/region-details.component.html
+++ b/src/app/components/region-details/region-details.component.html
@@ -4,11 +4,12 @@
             <mat-card-header>
                 <mat-card-title>{{upperFirstLetter(location?.name)}}</mat-card-title>
             </mat-card-header>
+            <img class="img" mat-card-image src="{{location?.img}}" alt="city image">
             <mat-card-content>
                 <div class="section">
                     <mat-card-title>Version</mat-card-title>
                     <mat-divider></mat-divider>
-                    <p>{{location?.name}}</p>
+                    <p>Generation V</p>
                 </div>
                 <div class="section">
                     <mat-card-title>Introduction</mat-card-title>
